Dialogs: Fall back to non-native dialog if native dialog can't be shown

A native dialog helper might not be able to show a dialog due to the
dialog options not being possible to represent with the native dialog.

If so the helper returns false from show(). We were not handling this
case, so failing to show a native dialog would result in no dialog
shown.

We now fall back to the non-native dialog by destroying the native
helper and using the non-native dialog helper explicitly.

Fixes: QTBUG-124124
Pick-to: 6.5
Change-Id: If50c63e419ae7b13e9317cd2cbbcaa02fe13bbd5
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>
(cherry picked from commit c821284d97b6be6755d1bddeec85d222ecb924e6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit e0b536e01d6d07db4f4cf012b8deca811d7d9bde)